# folixenda

./: .gitignore  CLAUDE.md  README.md
backend/: go.mod  main.go
backend/cmd/seed/: main.go
backend/database/: connect.go
backend/handlers/: auth.go  events.go  users.go
backend/models/: event.go  user.go
backend/store/: event_store.go  memory.go  postgres_event_store.go  postgres_user_store.go  user_store.go
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/calendar/: page.tsx
frontend/app/events/[id]/: page.tsx
frontend/components/: CalendarWidget.tsx  CategoryFilter.tsx  EventCard.tsx  MapView.tsx  Navbar.tsx
frontend/lib/: api.ts  auth.ts  mock-data.ts  types.ts
frontend/lib/api/: api.ts  auth.ts  events.ts  users.ts
scraper/: pyproject.toml
scraper/src/scraper/: feteas.py
scraper/src/services/: constants.py  database.py  requests.py
