[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Mario-Miguel",email = "mariomig5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "psycopg[binary,pool] (>=3.3.4,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "lxml (>=6.1.1,<7.0.0)",
]

[tool.poetry]
packages = [{include = "scraper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
